idea/testData/multiModuleLineMarker/expectConstructorWithProperties/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in JVM'")!>WithConstructor<!>(x: Int, s: String) {
    val <!LINE_MARKER("descr='Has actuals in JVM'")!>x<!>: Int

    val <!LINE_MARKER("descr='Has actuals in JVM'")!>s<!>: String
}